renamed the template to align with the correct vcs settings name

--- a/repositories/templates/repositories/apache2_subversion.conf
+++ b/repositories/templates/repositories/apache2_subversion.conf
@@ -1,21 +1,20 @@
 # Work around authz and SVNListParentPath issue
-RedirectMatch ^(/svn/public)$ $1/
-RedirectMatch ^(/svn/private)$ $1/
+RedirectMatch ^({{ public_url|slice:":-1" }})$ $1/
+RedirectMatch ^({{ private_url|slice:":-1" }})$ $1/
 
 # Authentication Settings
 <AuthnProviderAlias wsgi django>
-	WSGIAuthUserScript /var/code/myproject/conf/auth.wsgi application-group=django
+	WSGIAuthUserScript {{ wsgi_auth_script }} application-group=django
 </AuthnProviderAlias>
-<Directory /var/code/myproject/conf/>
+<Directory {{ wsgi_auth_script_path }}>
 	Order deny,allow
 	Allow from all
-
 	WSGIApplicationGroup django
 </Directory>
 
-WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
+WSGIScriptAlias / {{ wsgi_script }}
 
-<Location /svn/public/>
+<Location {{ public_url }}>
 	# Enable Subversion
 	DAV svn
 
@@ -23,7 +22,7 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 	SVNReposName "Open Source Repositories"
 
 	# Directory containing all public repositories
-	SVNParentPath /var/code/repositories/svn/public/
+	SVNParentPath {{ public_path }}
 
 	# For public repositories, allow listing all the available repositories
 	SVNListParentPath On
@@ -32,7 +31,7 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 	SVNAutoversioning On
 	
 	AuthType Basic
-	AuthName "Your Subversion Repository"
+	AuthName "Open Source Repositories"
 	AuthBasicProvider django
 
 	# Require authentication for commits and such
@@ -41,7 +40,7 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 		Require group write
 	</Limit>	
 </Location>
-<Location /svn/private/>
+<Location {{ private_url }}>
 	# Enable Subversion
 	DAV svn
 
@@ -49,7 +48,7 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 	SVNReposName "Private Repositories"
 
 	# Directory containing all private repositories
-	SVNParentPath /var/code/repositories/svn/private/
+	SVNParentPath {{ private_url }}
 
 	# For private repositories, can't see all available private repos
 	SVNListParentPath Off
@@ -59,10 +58,10 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 
 	# Require authentication
 	Require valid-user
-	
 	AuthType Basic
-	AuthName "Your Subversion Repository"
+	AuthName "Private Source Repositories"
 	AuthBasicProvider django
+	Require valid-user
 
 	# Read only directives
 	<Limit GET HEAD PROPFIND OPTIONS REPORT>
@@ -72,5 +71,5 @@ WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
 	# Require authentication for commits and such
 	<Limit GET HEAD OPTIONS CONNECT POST PUT DELETE PROPFIND PROPPATCH MKCOL COPY MOVE LOCK UNLOCK>
 		Require group write
-	</Limit>	
+	</Limit>
 </Location>
