Templatized the apache git config

--- a/repositories/templates/repositories/apache2_git.conf
+++ b/repositories/templates/repositories/apache2_git.conf
@@ -1,29 +1,27 @@
-# Work around authz and gitListParentPath issue
-RedirectMatch ^(/git/public)$ $1/
-RedirectMatch ^(/git/private)$ $1/
+RedirectMatch ^({{ public_url|slice:":-1" }})$ $1/
+RedirectMatch ^({{ private_url|slice:":-1" }})$ $1/
 
 # Authentication Settings
 <AuthnProviderAlias wsgi django>
-	WSGIAuthUserScript /var/code/myproject/conf/auth.wsgi application-group=django
+	WSGIAuthUserScript {{ wsgi_auth_script }} application-group=django
 </AuthnProviderAlias>
-<Directory /var/code/myproject/conf/>
+<Directory {{ wsgi_auth_script_path }}>
 	Order deny,allow
 	Allow from all
-
 	WSGIApplicationGroup django
 </Directory>
 
-WSGIScriptAlias / /var/code/myproject/conf/myproject.wsgi
+WSGIScriptAlias / {{ wsgi_script }}
 
-Alias /git/public /var/code/repositories/git/public
-Alias /git/private /var/code/repositories/git/private
+Alias {{ public_url }} {{ public_path }}
+Alias {{ private_url }} {{ private_path }}
 
-<Location /git/public/>
+<Location {{ public_url }}>
 	# Enable DAV
 	DAV on
 	
 	AuthType Basic
-	AuthName "Public Git Repositories"
+	AuthName "Open Source Repositories"
 	AuthBasicProvider django
 
 	# Require authentication for commits and such
@@ -32,7 +30,7 @@ Alias /git/private /var/code/repositories/git/private
 		Require group write
 	</Limit>
 </Location>
-<Location /git/private/>
+<Location {{ private_urls }}>
 	# Enable DAV
 	DAV on
 
@@ -40,7 +38,7 @@ Alias /git/private /var/code/repositories/git/private
 	Require valid-user
 	
 	AuthType Basic
-	AuthName "Private Git Repositories"
+	AuthName "Private Repositories"
 	AuthBasicProvider django
 
 	# Read only directives
