Reconfigured how the apache configuration is exported. It was duplicating the authentication settings and apache didn't like it.

--- a/repositories/templates/repositories/apache2_git.conf
+++ b/repositories/templates/repositories/apache2_git.conf
@@ -1,18 +1,6 @@
 RedirectMatch ^({{ public_url|slice:":-1" }})$ $1/
 RedirectMatch ^({{ private_url|slice:":-1" }})$ $1/
 
-# Authentication Settings
-<AuthnProviderAlias wsgi django>
-	WSGIAuthUserScript {{ wsgi_auth_script }} application-group=django
-</AuthnProviderAlias>
-<Directory {{ wsgi_auth_script_path }}>
-	Order deny,allow
-	Allow from all
-	WSGIApplicationGroup django
-</Directory>
-
-WSGIScriptAlias / {{ wsgi_script }}
-
 Alias {{ public_url }} {{ public_path }}
 Alias {{ private_url }} {{ private_path }}
 
@@ -30,7 +18,7 @@ Alias {{ private_url }} {{ private_path }}
 		Require group write
 	</Limit>
 </Location>
-<Location {{ private_urls }}>
+<Location {{ private_url }}>
 	# Enable DAV
 	DAV on
 
